--- a/trunk/clientv2/js/client/templates/company-header.tmpl.html
+++ b/trunk/clientv2/js/client/templates/company-header.tmpl.html
@@ -2,8 +2,8 @@
 	<div class="login-bar">
 		<span class="stock-facts"><b>StockFacts <i>Premium</i></b> delivers enhanced features and benefits. <a data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } ">Learn more &raquo;</a> </span>
 		<div class="right">
-			<a class="button" data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } ">Sign in</a>
-			<a class="button" data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } ">Start your free trial</a>
+			<a class="button" data-bind="siteLink: { id: 'sign-in', extra: 'code=' + ticker } ">Sign in</a>
+			<a class="button" data-bind="siteLink: { id: 'sign-up', extra: 'code=' + ticker } ">Start your free trial</a>
 		</div>
 		<!--<span class="stock-facts">StockFacts <i>Premium</i></span>
 		<span class="logged-in-as">Logged in as sbray@wealthmsi.com</span>
