--- a/clientv2/css/style.css
+++ b/clientv2/css/style.css
@@ -321,6 +321,7 @@ header.header { margin: 10px 0 0 0; }
 .header .profile nav ul { font-size: 0; overflow: hidden; }
 .header .profile nav ul li { display: inline-block; font-size: 13pt !important; line-height: 36px; }
 .header .profile nav ul li a { padding: 10px 53px; color: #fff; text-decoration: none; border: 1px solid #000; border-bottom: 0 !important; border-radius: 8px 8px 0 0; }
+
 /* Nav Active Link Styles */
 .header .profile nav ul li a:hover,
 #tearsheet .header .profile nav ul li.company-tearsheet a,
@@ -328,6 +329,15 @@ header.header { margin: 10px 0 0 0; }
 #estimates .header .profile nav ul li.company-estimates a,
 #charting .header .profile nav ul li.company-charting a,
 #comparables .header .profile nav ul li.company-comparables a { background: #fff; color: #000; border-color: #fff; border-radius: 8px 8px 0 0; cursor: pointer; }
+
+#premium h5 { text-transform: uppercase; }
+#premium .premium-wrapper .trial-box { background: #e6e7e7; padding: 25px; width: 380px; float: left; margin: 0 25px 0 0  }
+#premium .premium-wrapper .trial-box p { color: #333;  margin: 0 0 20px 0; font-size: 13pt; }
+#premium .premium-wrapper .trial-box p i { font-size: 10pt !important; }
+#premium .premium-wrapper .trial-box .button { font-size: 13pt; margin: 0 15px 0 0; padding: 7px 25px; text-decoration: none; }
+#premium .premium-wrapper .trial-box .not { color: #1e2171; font-size: 10pt; text-transform: uppercase; text-decoration: none; }
+#premium .premium-wrapper .trial-box .not:hover { text-decoration: underline; }
+#premium .premium-wrapper img { display: inline-block; }
 
 .title {
 background: url("../img/title-back.png");
