--- a/trunk/clientv2/css/sign-in.css
+++ b/trunk/clientv2/css/sign-in.css
@@ -8,13 +8,10 @@ section .form p.forgot { padding: 0 0 15px 0; margin: 0; }
 section .form input.text { background: #f5f5f5; border: 1px solid #c4c4c4; color: #848484; display: block; margin: 0 auto 17px auto; width: 349px; padding: 0 12px; line-height: 32px; height: 32px; }
 
 section .form .agree-email { margin: 0 auto; width: 373px; position: relative; }
-section .form .checkbox { height: 19px; text-align: left; }
-section .form .checkbox .trigger { padding-left: 25px; color: #000; font-size: 12px; font-weight: bold; background: url("../img/bg-checkboxes.png") no-repeat 0 -26px; line-height: 16px; position: relative; z-index: 100; }
-section .form .checkbox .trigger:hover, 
-section .form .checkbox.checked { background-position: 0 -54px; }
-section .form .checkbox.checked .trigger, 
-section .form .checkbox.checked:hover { background-position: 0 0; }
-section .form .checkbox input { position: absolute; left: 4px; top: 2px; z-index: 50; display: none; }
+
+section .form .checkbox { color: #000; font-size: 12px; line-height: 16px; text-align: left; }
+section .form .checkbox input { height: 16px; width: 16px; line-height: 16px; }
+section .form .checkbox label { position: relative; top: -2px; }
 section .form .button { font-size: 17px !important; margin: 20px 0; padding: 5px 25px !important; }
 
 section .form .error-messages p { color: #bf0052 !important; line-height: 16px; padding: 0 0 10px 0; }
