--- a/trunk/clientv2/css/sign-in.css
+++ b/trunk/clientv2/css/sign-in.css
@@ -25,9 +25,10 @@ section.settings .form-wrapper span.change a { cursor: pointer; }
 section.settings .form-wrapper span input[type="password"] { background: #f5f5f5; border: 1px solid #c4c4c4; color: #848484; width: 148px; padding: 0 12px; line-height: 28px; height: 28px; display: inline-block !important; margin: 0 12px 0 0; }
 section.settings .form-wrapper span input[type="password"].password { background: none; border: 0; margin: 0; padding: 0; width: 100px; }
 section.settings .form-wrapper span.note { font-size: 8pt; margin: 0 0 0 35px; }
-section.settings .form-wrapper .new-pass { display: none; }
-section.settings .form-wrapper .mailings input[type="radio"] { margin: 0; padding: 0; position: relative; top: 1px; cursor: pointer; }
-section.settings .form-wrapper .mailings label { width: 40px; cursor: pointer; }
+section.settings .form-wrapper .error-messages { text-align: center; margin: 12px 0 0 0; }
+section.settings .form-wrapper .error-messages p { padding: 0; }
+/*section.settings .form-wrapper .mailings input[type="radio"] { margin: 0; padding: 0; position: relative; top: 1px; cursor: pointer; }
+section.settings .form-wrapper .mailings label { width: 40px; cursor: pointer; }*/
 
 section footer { background: #bcbdbe; height: 40px; overflow: hidden; }
 section footer span { display: inline-block; padding: 0 15px; }
