--- a/trunk/clientv2/css/style.css
+++ b/trunk/clientv2/css/style.css
@@ -341,6 +341,9 @@ header.header { margin: 10px 0 0 0; }
 #premium .premium-wrapper .trial-box .not:hover { text-decoration: underline; }
 #premium .premium-wrapper img { display: inline-block; }
 
+.cancel { cursor: pointer; }
+
+
 .title {
 background: url("../img/title-back.png");
   background-image: -webkit-gradient(linear, left bottom, left top, from(#dcdcdc), to(#fff));
