Updates to login pages.  Cleaned up handleAjax code and converted POST & GET to use same call with additional parameters added to code

--- a/clientv2/js/client/templates/company-header.tmpl.html
+++ b/clientv2/js/client/templates/company-header.tmpl.html
@@ -1,24 +1,27 @@
 <header class="header">	
-	<div class="login-bar">
-		<!--<span class="stock-facts"><b>StockFacts <i>Premium</i></b> delivers enhanced features and benefits. <a data-bind="siteLink: { id: 'premium', extra: 'code=' + ticker } ">Learn more &raquo;</a> </span>
+	<div class="login-bar" data-bind="css: {'non-premium': (premiumUser() == false)}">
+		<span class="stock-facts"><b>StockFacts <i>Premium</i></b> delivers enhanced features and benefits. <a data-bind="siteLink: { id: 'premium', extra: 'code=' + ticker } ">Learn more &raquo;</a> </span>
 		<div class="right">
 			<a class="button" data-bind="siteLink: { id: 'sign-in', extra: 'code=' + ticker } ">Sign in</a>
 			<a class="button" data-bind="siteLink: { id: 'sign-up', extra: 'code=' + ticker } ">Start your free trial</a>
-		</div>-->
+		</div>
+	</div>
+	
+	<div class="login-bar" data-bind="css: {'premium': (premiumUser() == true)}">		
 		<span class="stock-facts">StockFacts <i>Premium</i></span>
-		<span class="logged-in-as">Logged in as sbray@wealthmsi.com</span>
+		<span class="logged-in-as">Logged in as <span data-bind="text: premiumUserEmail"></span></span>
 		<ul>
 			<li><a href="">Account</a></li>
 			<li><a href="">Alerts</a></li>
-			<li class="last"><a data-bind="siteLink: { id: 'logout', extra: 'code=' + ticker } ">Sign Out</a></li>
+			<li class="last"><a data-bind="siteLink: { id: 'logout', extra: 'ref=manual'} ">Sign Out</a></li>
 		</ul>
 		<div class="right">
 			<span class="currency">Currency</span>
 			<select>
 				<option>Singapore (SGD)</option>
 			</select>
-		</div>
-	</div>
+		</div>	
+	</div>	
 	
 	<div class="profile">
 		<div class="left">
@@ -57,8 +60,8 @@
 			<ul>
 				<li class="company-tearsheet"><a data-bind="siteLink: { id: 'company-tearsheet', extra: 'code=' + ticker } ">Profile</a></li>
 				<li class="company-financials"><a data-bind="siteLink: { id: 'company-financials', extra: 'code=' + ticker }">Financials</a></li>
-				<li class="company-estimates"><a data-bind="siteLink: { id: 'company-estimates', extra: 'code=' + ticker }">Estimates</a></li>
-				<li class="company-charting"><a data-bind="siteLink: { id: 'company-charting', extra: 'code=' + ticker }">Technical Charting</a></li>
+				<li class="company-estimates"><a data-bind="siteLink: { id: premiumUser() == false ? 'premium' :'company-estimates', extra: 'code=' + ticker }">Estimates</a></li>
+				<li class="company-charting"><a data-bind="siteLink: { id: premiumUser() == false ? 'premium' : 'company-charting', extra: 'code=' + ticker }">Technical Charting</a></li>
 				<li class="company-comparables"><a data-bind="siteLink: { id: 'company-comparables', extra: 'code=' + ticker }">Comparable Companies</a></li>
 			</ul>		
 		</nav>
