--- a/clientv2/css/sign-in.css
+++ b/clientv2/css/sign-in.css
@@ -6,7 +6,8 @@ section .form.confirm,
 section .form.rp-sent { min-height: 175px; padding: 25px; }
 section .form h4 { padding: 14px 0; }
 section .form p { padding: 15px 0; margin: 0; }
-section .form p.forgot { padding: 0 0 15px 0; margin: 0; }
+section .form p.forgot,
+section .form p.link { padding: 0 0 15px 0; margin: 0; }
 section .form input.text { background: #f5f5f5; border: 1px solid #c4c4c4; color: #848484; display: block; margin: 0 auto 17px auto; width: 349px; padding: 0 12px; line-height: 32px; height: 32px; }
 
 section .form .agree-email { margin: 0 auto; width: 373px; position: relative; }
