--- a/trunk/clientv2/css/style.css
+++ b/trunk/clientv2/css/style.css
@@ -274,7 +274,9 @@ table th, table td {
 
 /* Premium Header */
 header.header { margin: 10px 0 0 0; }
-.header .login-bar { background: #d5e3ea; border: 1px solid #b3c6cf; color: #333 !important; height: 28px; font-size: 0; }
+.header .login-bar { background: #d5e3ea; border: 1px solid #b3c6cf; color: #333 !important; height: 28px; font-size: 0; display: none; }
+.header .login-bar.premium,
+.header .login-bar.non-premium { display: block; }
 .header .login-bar a { color: #0b236b; text-decoration: none; }
 .header .login-bar a:hover { text-decoration: underline; }
 .header .login-bar span,
@@ -293,7 +295,7 @@ header.header { margin: 10px 0 0 0; }
 .header .login-bar select,
 .settings select { background: #d9d9d9; border: 1px solid #b6b6b6; font-size: 7.5pt; font-weight: bold; }
 .header .login-bar .right { float: right; margin: 0 12px 0 0; }
-.header .login-bar .button { color: #fff; line-height: 20px; margin: 4px 0 4px 8px; }
+.header .login-bar .button { color: #fff; line-height: 20px; height: 20px; margin: 4px 0 4px 8px; }
 .header .login-bar .button:hover { text-decoration: none; }
 
 .header .profile { background: #0b236b; margin: 18px 0; }
