--- a/clientv2/js/client/templates/login-bar.tmpl.html
+++ b/clientv2/js/client/templates/login-bar.tmpl.html
@@ -6,12 +6,12 @@
 		</div>
 	</div>
 	
-	<div class="login-bar" data-bind="css: {'premium': (premiumUser() == true)}">		
+	<div class="login-bar" data-bind="css: {'premium': (premiumUser() ==  true)}">		
 		<span class="stock-facts">StockFacts <i>Premium</i></span>
 		<span class="logged-in-as">Logged in as <span data-bind="text: premiumUserEmail"></span></span>
 		<ul>
-			<li><a href="">Account</a></li>
-			<li><a href="">Alerts</a></li>
+			<li><a data-bind="siteLink: { id: 'account-settings'}">Account</a></li>
+			<li><a data-bind="siteLink: { id: 'alerts'}">Alerts</a></li>
 			<li class="last"><a data-bind="siteLink: { id: 'logout'} ">Sign Out</a></li>
 		</ul>
 		<div class="right">
