--- a/trunk/clientv2/js/client/templates/company-header.tmpl.html
+++ b/trunk/clientv2/js/client/templates/company-header.tmpl.html
@@ -37,8 +37,8 @@
 			<ul>
 				<li class="company-tearsheet"><a data-bind="siteLink: { id: 'company-tearsheet', extra: 'code=' + ticker } ">Profile</a></li>
 				<li class="company-financials"><a data-bind="siteLink: { id: 'company-financials', extra: 'code=' + ticker }">Financials</a></li>
-				<li class="company-estimates"><a data-bind="siteLink: { id: premiumUser() == false ? 'premium' :'company-estimates', extra: 'code=' + ticker }">Estimates</a></li>
-				<li class="company-charting"><a data-bind="siteLink: { id: premiumUser() == false ? 'premium' : 'company-charting', extra: 'code=' + ticker }">Technical Charting</a></li>
+				<li class="company-estimates"><a data-bind="siteLink: { id: 'company-estimates', extra: 'code=' + ticker }">Estimates</a></li>
+				<li class="company-charting"><a data-bind="siteLink: { id: 'company-charting', extra: 'code=' + ticker }">Technical Charting</a></li>
 				<li class="company-comparables"><a data-bind="siteLink: { id: 'company-comparables', extra: 'code=' + ticker }">Comparable Companies</a></li>
 			</ul>		
 		</nav>
