--- a/trunk/clientv2/js/client/templates/company-header.tmpl.html
+++ b/trunk/clientv2/js/client/templates/company-header.tmpl.html
@@ -27,7 +27,7 @@
 			<a data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } " class="back">Back to StockFacts</a>
 			<div class="right">
 				<a data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } " class="view">View Retail Brokers</a>
-				<a data-bind="siteLink: { id: 'index', extra: 'code=' + ticker } " class="add">Add to Watchlist</a>
+				<a data-bind="siteLink: { id: 'alerts', extra: 'code=' + ticker } " class="add">Add to Watchlist</a>
 				<a data-bind="siteLink: { id: 'print', extra: 'code=' + ticker } " class="down-print">Download/Print</a>
 			</div>
 			<!--<a data-bind="siteLink: { id: 'trade', extra: 'code=' + ticker } ">Trade</a>-->
