--- a/trunk/clientv2/css/sign-in.css
+++ b/trunk/clientv2/css/sign-in.css
@@ -3,12 +3,18 @@ section header { background: #5f6062; height: 110px; }
 section header h2 { color: #fff; font-size: 31px; text-align: center; position: relative; top: 60px; }
 section .form { background: #ebecec; text-align: center; }
 section .form.confirm,
-section .form.rp-sent { min-height: 175px; padding: 25px; }
+section .form.rp-sent,
+section .form.sign-up { min-height: 175px; padding: 25px; }
 section .form h4 { padding: 14px 0; }
 section .form p { padding: 15px 0; margin: 0; }
 section .form p.forgot,
 section .form p.link { padding: 0 0 15px 0; margin: 0; }
 section .form input.text { background: #f5f5f5; border: 1px solid #c4c4c4; color: #848484; display: block; margin: 0 auto 17px auto; width: 349px; padding: 0 12px; line-height: 32px; height: 32px; }
+
+section .link a,
+section .form .checkbox a { cursor: pointer; color: #1e2171; text-decoration: underline; }
+section .link a:hover,
+section .form .checkbox a:hover { text-decoration: none; }
 
 section .form .agree-email { margin: 0 auto; width: 373px; position: relative; }
 
@@ -26,14 +32,16 @@ section.settings .form { background: #ebecec; padding: 0 30px 30px 30px; width: 
 section.settings .form-wrapper { padding: 30px 0 0 0; }
 section.settings .form-wrapper label { width: 200px; display: inline-block; color: #333; font-weight: bold; }
 section.settings .form-wrapper span { display: inline-block; color: #767676; }
-section.settings .form-wrapper span.change a { cursor: pointer; }
+section.settings a { cursor: pointer; color: #1e2171; }
+section.settings a:hover { text-decoration: underline; }
 section.settings .form-wrapper span input[type="password"] { background: #f5f5f5; border: 1px solid #c4c4c4; color: #848484; width: 148px; padding: 0 12px; line-height: 28px; height: 28px; display: inline-block !important; margin: 0 12px 0 0; }
 section.settings .form-wrapper span input[type="password"].password { background: none; border: 0; margin: 0; padding: 0; width: 100px; }
 section.settings .form-wrapper span.note { font-size: 8pt; margin: 0 0 0 35px; }
 section.settings .form-wrapper .error-messages { text-align: center; margin: 12px 0 0 0; }
 section.settings .form-wrapper .error-messages p { padding: 0; }
-/*section.settings .form-wrapper .mailings input[type="radio"] { margin: 0; padding: 0; position: relative; top: 1px; cursor: pointer; }
-section.settings .form-wrapper .mailings label { width: 40px; cursor: pointer; }*/
+section.settings .cancel { margin: 0 15px; }
+section.settings .form-wrapper label.mailings { width: 45px; cursor: pointer; margin: 0 15px 0 0; }
+section.settings .form-wrapper label.mailings input[type="radio"] { margin: 0; padding: 0; position: relative; top: 2px; cursor: pointer; }
 
 section footer { background: #bcbdbe; height: 40px; overflow: hidden; }
 section footer span { display: inline-block; padding: 0 15px; }
