updated code for login bar

--- a/clientv2/css/style.css
+++ b/clientv2/css/style.css
@@ -278,15 +278,16 @@ header.header { margin: 10px 0 0 0; }
 .header .login-bar { background: #d5e3ea; border: 1px solid #b3c6cf; color: #333 !important; height: 28px; font-size: 0; display: none; }
 .header .login-bar.premium,
 .header .login-bar.non-premium { display: block; }
+.header .login-bar .hide { display: none !important; }
 .header .login-bar a { color: #0b236b; text-decoration: none; }
 .header .login-bar a:hover { text-decoration: underline; }
 .header .login-bar span,
 .header .login-bar ul,
 .header .login-bar ul li,
 .header .login-bar select { display: inline-block; line-height: 29px !important; }
-.header .login-bar .stock-facts { margin: 0 12px; line-height: 29px !important; }
+.header .login-bar .stock-facts { margin: 0 0 0 12px; line-height: 29px !important; }
 .header .login-bar.logged-in .stock-facts { font-weight: bold; padding: 0 12px }
-.header .login-bar .logged-in-as { background: #b3c6cf; font-weight: bold; padding: 0 9px; }
+.header .login-bar .logged-in-as { background: #b3c6cf; font-weight: bold; padding: 0 9px; margin: 0 0 0 12px; }
 .header .login-bar ul { margin: 0 !important; padding: 0 6px; }
 .header .login-bar ul li { border-right: 1px solid #333; line-height: 16px !important; padding: 0 6px; }
 .header .login-bar ul li a { text-decoration: none; }
