--- a/clientv2/css/alerts.css
+++ b/clientv2/css/alerts.css
@@ -18,10 +18,10 @@
 .watchlist .search .searchtoggle .toggle { display: inline-block; margin: 0px; padding-left: 15px;  padding-right: 15px; background-color: #565a5c; }
 .watchlist .search .searchtoggle .toggle.sname { -webkit-border-bottom-right-radius: 0; -moz-border-radius-bottomright: 0; border-bottom-right-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; border-top-right-radius: 0; }
 .watchlist .search .searchtoggle .toggle.scode { -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; }
-.watchlist .search .searchtoggle .selected { background-color: #1e2171; }
-.watchlist .search .searchbar { margin: 10px 0; border: 1px solid #1e2171; display: inline-block; -webkit-border-radius: 4px; border-radius: 4px; height: 22px; position: relative; width: 212px; background: #fff; -webkit-background-clip: padding; -moz-background-clip: padding; background-clip: padding-box; }
+.watchlist .search .searchtoggle .selected { background-color: #0e236b; }
+.watchlist .search .searchbar { margin: 10px 0; border: 1px solid #0e236b; display: inline-block; -webkit-border-radius: 4px; border-radius: 4px; height: 22px; position: relative; width: 212px; background: #fff; -webkit-background-clip: padding; -moz-background-clip: padding; background-clip: padding-box; }
 .watchlist .search .searchbar input { border: none; padding: 0px; color: #494949; font: normal 12px Arial, Helvetica, sans-serif; font-style: italic; width: 186px; height: 22px; text-indent: 10px; background: none; }
-.watchlist .search .search-submit { position: absolute; top: 0px; right: 0px; width: 26px !important; height: 0; padding-top: 22px; background: #1e2171 url("../img/searchbar-icon.jpg") no-repeat center center !important; z-index: 20; cursor: pointer; }
+.watchlist .search .search-submit { position: absolute; top: 0px; right: 0px; width: 26px !important; height: 0; padding-top: 22px; background: #0e236b url("../img/searchbar-icon.jpg") no-repeat center center !important; z-index: 20; cursor: pointer; }
 
 .watchlist .companies ul li .remove { background: url(../img/x-button.png) no-repeat; height: 16px; width: 16px; }
 .watchlist .companies ul li .company { font-size: 12px !important; font-weight: normal !important;}
