Edits based on tickets

--- a/clientv2/css/results.css
+++ b/clientv2/css/results.css
@@ -143,7 +143,4 @@
 	font-weight: bold;
 }
 
-.customize-display-modal {
-	width: 550px !important;
-	height: 460px !important;
-}
+.customize-display-modal { width: 550px; height: 460px; }
