--- a/clientv2/css/sign-in.css
+++ b/clientv2/css/sign-in.css
@@ -1,6 +1,6 @@
 section { margin: 0 auto 50px auto; width: 700px; }
 section header { background: #5f6062; height: 110px; }
-section header h2 { color: #fff; font-size: 31px; text-align: center; position: relative; top: 60px; }
+section header h2 { color: #fff; font-size: 31px; text-align: center; position: relative; top: 60px; font-weight: normal !important; }
 section .form { background: #ebecec; text-align: center; }
 section .form.confirm,
 section .form.rp-sent,
@@ -15,14 +15,11 @@ section .link a,
 section .form .checkbox a { cursor: pointer; color: #0e236b; text-decoration: underline; }
 section .link a:hover,
 section .form .checkbox a:hover { text-decoration: none; }
-
 section .form .agree-email { margin: 0 auto; width: 373px; position: relative; }
-
 section .form .checkbox { color: #000; font-size: 12px; line-height: 16px; text-align: left; }
 section .form .checkbox input { height: 16px; width: 16px; line-height: 16px; }
 section .form .checkbox label { position: relative; top: -2px; }
 section .form .button { font-size: 17px !important; margin: 20px 0; padding: 5px 25px !important; }
-
 section .form .error-messages p { color: #bf0052 !important; line-height: 16px; padding: 0 0 10px 0; }
 
 .error-messages .resend-email { display: none; }
@@ -40,10 +37,10 @@ section.settings a { cursor: pointer; color: #0e236b; }
 section.settings a:hover { text-decoration: underline; }
 section.settings .form-wrapper span input[type="password"] { background: #f5f5f5; border: 1px solid #c4c4c4; color: #848484; width: 148px; padding: 0 12px; line-height: 28px; height: 28px; display: inline-block !important; margin: 0 12px 0 0; }
 section.settings .form-wrapper span input[type="password"].password { background: none; border: 0; margin: 0; padding: 0; width: 100px; }
-section.settings .form-wrapper span.note { font-size: 8pt; margin: 0 0 0 35px; }
+section.settings .form-wrapper span.note { font-size: 8pt; font-weight: bold; margin: 0 0 0 35px; }
 section.settings .form-wrapper .error-messages { text-align: center; margin: 12px 0 0 0; }
 section.settings .form-wrapper .error-messages p { padding: 0; }
-section.settings .cancel { margin: 0 15px; }
+section.settings .cancel { margin: 0 15px; font-size: 17px !important; }
 section.settings .form-wrapper label.mailings { width: 45px; cursor: pointer; margin: 0 15px 0 0; }
 section.settings .form-wrapper label.mailings input[type="radio"] { margin: 0; padding: 0; position: relative; top: 2px; cursor: pointer; }
 
